corrigido  <!--exercio:  Formulários-->

--- a/HTML-Form/formulario1.html
+++ b/HTML-Form/formulario1.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
+ <!--exercio:  Formulários-->
     <form method="POST" action="dados.php">
-        <label>nome: </label> <input type="text" name="nome" />
+        <label>nome:</label><input type="text" name="nome" />
         <label>sobrenome: </label><input type="text" name="sobrenome" />
         <label>Escolha um estado: </label>
         <select name="estado">
-            <option value="RJ">Rio de Janeiro  </option>
+            <option value="RJ">Rio de Janeiro</option>
             <option value="SP">São Paulo</option>
-            <option value="MG">Minas Gerais</option>           
+            <option value="MG">Minas Gerais</option>
         </select>
-
         <input type="submit" name="enviar" />
     </form>
+
+
+
 </body>
 
 </html>
