--- a/DevMedia/HTML-Form/formulario2.html
+++ b/DevMedia/HTML-Form/formulario2.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario2</title>
 </head>
+
 <body>
     <!--exercio:Exibindo uma imagem -->
-    <div>    
+    <div>
         <h3>Golf GTI</h3>
-        <img src="carros/golf_gti.jpg" alt="Carro"/>
+        <img src="carros/golf_gti.jpg" alt="Carro" />
     </div>
 
     <!--Lista não-ordenada-->
@@ -23,9 +25,33 @@
     </ul>
 
     <!--Exercicio: Link -->
+    <!--
     <a href="cadastrar.html">Cadastrar</a>
+ -->
 
-    
-    
+    <!--  Lista em numeros romanos-->
+    <ol type="I">
+        <li>Lancer </i>
+        <li>Longshot</i>
+        <li>Hammerburst</i>
+        <li>Boltok</i>
+        <li>Gnasher</i>
+    </ol>
+
+    <!--Lista de descrição -->
+    <dl>
+        <dt>Primeiro Termo</dt> <dd>Significado do Primeiro termo</dd>
+        <dt>Segundo Termo</dt> <dd>Significado do Segundo Termo</dd>
+    </dl>
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
