--- a/HTML-Form/formulario1.html
+++ b/HTML-Form/formulario1.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
- <!--exercio:  Formulários-->
+    <!--exercio:  Formulários-->
+    <!---
     <form method="POST" action="dados.php">
         <label>nome:</label><input type="text" name="nome" />
         <label>sobrenome: </label><input type="text" name="sobrenome" />
@@ -21,6 +22,52 @@
         </select>
         <input type="submit" name="enviar" />
     </form>
+    -->
+
+    <!-- Complete o formulário-->
+    <!--
+    <form mehod="POST" action="cadastro.php">
+        <label>login: </label><input type="text" name="login" />
+        <label>senha: </label><input type="password" name="senha" />
+        <label>Onde você mora?: </label>
+        <label>No Brasil: </label><input type="text" name="pais" value="BR" />
+        <label>Em outro país: </label>
+        <input type="radio" name="pais" value="OUTRO" />
+        <input type="submit" name="cadastrar" />
+    </form>
+     -->
+
+         <!-- adicionado execicio de tabela -->
+
+    <table>
+        <thead>
+            <tr>
+                <th> Jogo </th>
+                <th>  Desenvolvedora   </th>
+                <th>Publicadora</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Gears 5 </td>
+                <td>The Coalition </td>
+                <td> Xbox Game Studios</td>
+            </tr>
+            <tr>
+                <td>The legend of Zelda: Minish Cap</td>
+                <td>CAPCOM/Flagship</td>
+                <td>Nintendo</td>
+            </tr>
+            <tr>
+                <td>Uncharted 4</td>
+                <td>Naughty Dog</td>
+                <td>Sony Interactive Entertainment</td>
+            </tr>
+        </tbody>
+    </table>
+
+
 
 
 
