exercio:    <!--Exercicio: Link -->

--- a/DevMedia/HTML-Form/formulario2.html
+++ b/DevMedia/HTML-Form/formulario2.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <!--exercio:Exibindo uma imagem -->
+    <!--exercio:Exibindo uma imagem 
     <div>
         <h3>Golf GTI</h3>
         <img src="carros/golf_gti.jpg" alt="Carro" />
     </div>
 
-    <!--Lista não-ordenada-->
+    Lista não-ordenada
     <ul>
         <li> Japão</li>
         <li> Estados Unidos</li>
@@ -24,13 +24,12 @@
         <li> Israel </li>
     </ul>
 
-    <!--Exercicio: Link -->
+<!--Exercicio: Link -->
     <!--
     <a href="cadastrar.html">Cadastrar</a>
- -->
 
-    <!--  Lista em numeros romanos-->
-    <ol type="I">
+
+ <!--  Lista em numeros romanos
         <li>Lancer </i>
         <li>Longshot</i>
         <li>Hammerburst</i>
@@ -38,17 +37,45 @@
         <li>Gnasher</i>
     </ol>
 
-    <!--Lista de descrição -->
+ <!--Lista de descrição 
     <dl>
-        <dt>Primeiro Termo</dt> <dd>Significado do Primeiro termo</dd>
-        <dt>Segundo Termo</dt> <dd>Significado do Segundo Termo</dd>
+        <dt>Primeiro Termo</dt>
+        <dd>Significado do Primeiro termo</dd>
+        <dt>Segundo Termo</dt>
+        <dd>Significado do Segundo Termo</dd>
     </dl>
+-->
+
+    <!--exercicio Preenchendo o perfil   -->
+    <form method="POST" action="perfil.php">
+        <label>Nome: </label><input name="nome" type="text" /><br>
+        <label>Sobrenome: </label><input name="sobrenome" type="text" /><br>
+        <label>Sobre mim: </label><input name="sobremim"></textarea><br>
+        <input type="submit" name="enviar" />
+    </form>
 
 
+    <!--  -->
 
+    <!DOCTYPE html>
+    <html lang="pt-br">
 
+        <head>
+            <meta charset="UTF-8">
+            <title>Links</title>
+        </head>
+        <body>
+            <div>
+                <h1>Este é o titulo da seção</h1>
+                <p>Este é o primeiro parágrafo.
+                    <a htref="tabelas.html" target="_self">Segue o link </a>
+                    <img digite="imagem.jpg" />
+                </p>
+            </div>
 
+        <body>
 
+</html>
 
 
 
