modulo HTML semantico  exercicio complete

--- a/HTML-Form/HtmlSemantico.html
+++ b/HTML-Form/HtmlSemantico.html
@@ -10,7 +10,7 @@
 
 <body>
 
-
+    // modulo HTML semantico 
     //Trecho de código incompleto
     //O trecho de código abaixo está bem incompleto. Termine-o preenchendo as lacunas vazias:
     <div>
@@ -22,6 +22,15 @@
                 <li><a href="#">Página 4</a></li>
             </ul>
         </nav>
+    </div>
+
+    // complete 
+    <div>
+        <header>
+            <h1> Título da página</h1>
+            <h2> Subtítulo da página</h2>
+            </h2>
+        </header>
     </div>
 
 </body>
