--- a/HTML-Form/HtmlSemantico.html
+++ b/HTML-Form/HtmlSemantico.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    // modulo HTML semantico 
+    // modulo HTML semantico
     //Trecho de código incompleto
     //O trecho de código abaixo está bem incompleto. Termine-o preenchendo as lacunas vazias:
     <div>
@@ -24,7 +24,7 @@
         </nav>
     </div>
 
-    // complete 
+    // complete
     <div>
         <header>
             <h1> Título da página</h1>
@@ -32,6 +32,28 @@
             </h2>
         </header>
     </div>
+
+
+
+    //exercio section
+    <section id="formulario">
+
+        <form action="cadastra-usuario.php" method="post">
+
+            <label> Nome:</label>
+                <input type="text" name="nome">
+
+                <label>Login:</label>
+                <input type="text" name="login">
+
+                <label>Senha:</label>
+                <input type="password" name="senha">
+
+                <input type="submit" value="Cadastrar">
+
+            </ <form>
+
+    </section>
 
 </body>
 
